--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="gift-img" id="gift-img-cheers"></div>
         </div>
         
-        <p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>
+        <p id="footer"></a></p>
         
     </body>
 </html>
