--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         
         <div class="gift-section">
-            <h2 class="gift-title">The only person as badass as you 💪</h2>
+            <h2 class="gift-title">The only person as savage as you 💪</h2>
             <div class="gift-img" id="gift-img-badass"></div>
         </div>
         
